# working-day

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Makefile.local  README.md  docker-compose.yml  test_https.py
.github/workflows/: ci.yml  docker.yaml
configs/: config_vars.docker.yaml  config_vars.testsuite.yaml  config_vars.yaml  config_vars_testing.yaml  dynamic_config_fallback.json  secdist.json  static_config.yaml  static_config.yaml.in
deploy/: deploy_docker.sh  docker-compose.yml
docs/yaml/: openapi.yaml
postgresql/bootstrap_migrations/: 1__wd_general.sql  2__auth_tokes_db.sql  4__inventory_type.sql
postgresql/data/: initial_data.sql
postgresql/migrations/: 10_reverse_index.sql  11__documents_db.sql  1__employees_db.sql  2__auth_tokes_db.sql  2__notifications_db.sql  3__actions_db.sql  4__actions_db.sql  4__payments_db.sql  5__actions_db.sql  5__payments_db.sql  5__reverse_index.sql  6__companies.sql  6__documents_db.sql  6_reverse_index.sql  7__split_actions.sql  7__teams_db.sql  8__inventory.sql  8__payments_db.sql  9__additional_profile_info.sql
postgresql/schemas/: 1__employees_db.sql  2__personal_info.sql  3__auth_tokes_db.sql  4__notifications_db.sql  5__actions_db.sql  db_1.sql
python_service/: Dockerfile  main.py  requirements.txt  start_service.sh
python_service/generate_document/: generate.py  requirements.txt
python_service/generate_document/templates/: esv_create.docx  evsikovaip_create.docx  sadGrandKavkaz_create.docx  split.docx
python_service/s3_client/: aws_utils.py
python_service/salary_split/: excelsplit.py  Расчетный лист.xlsx
python_service/salary_split/result/: Алакин Сергей Анатольевич (00003).xlsx  Афанасьев Алексей Владимирович (00003).xlsx  Гилязов Вадим Данилович (00004).xlsx  Гренц Антон Сергеевич (00001).xlsx  Замятина Ирина Геннадьевна (00003).xlsx  Кильдяев Александр Александрович  (00005).xlsx  Кильдяев Иван Александрович (00001).xlsx  Крючкова Фируза Габдулхаевна (00001).xlsx  Марковских Ксения Сергеевна (00003).xlsx  Морозова Юлия Владимировна (00004).xlsx  Нестеренко Ирина Юрьевна (00001).xlsx  Нугуманова Диана Тагировна (00004).xlsx  Нугуманова Диана Тагировна (00005).xlsx  Подкорытов Сергей Владимирович (00006).xlsx  Полежаева Анна Витальевна (00001).xlsx  Снетков Никита Вячеславович (00002).xlsx  Токмакова Олеся Петровна (00004).xlsx  Токмакова Олеся Петровна (00005).xlsx  Трифонов Никита Сергеевич (00002).xlsx  Шеповалова Светлана Валентиновна (00005).xlsx
python_service/sign_document/: sign.py  stamp.py
scripts/: setup_comapny_db.sh  setup_company_db.sh
serverless/: gen_pdf.py
serverless/word_vacation/: generate.py  requirements.txt
serverless/word_vacation/templates/: create.docx
src/: hello.cpp  hello.hpp  hello_benchmark.cpp  hello_test.cpp  main.cpp
src/auth/: auth_bearer.cpp  auth_bearer.hpp  user_info_cache.hpp
src/core/json_compatible/: struct.cpp  struct.hpp
src/core/reverse_index/: view.cpp  view.hpp
src/definitions/: all.hpp
src/utils/: custom_implicit_options.cpp  custom_implicit_options.hpp  s3_presigned_links.cpp  s3_presigned_links.hpp
src/views/v1/abscence/request/: view.cpp  view.hpp
src/views/v1/abscence/reschedule/: view.cpp  view.hpp
src/views/v1/actions/: view.cpp  view.hpp
src/views/v1/add_company/: view.cpp  view.hpp
src/views/v1/authorize/: view.cpp  view.hpp
src/views/v1/clear-tasks/: view.cpp  view.hpp
src/views/v1/employees/: view.cpp  view.hpp
src/views/v1/notifications/: view.cpp  view.hpp
src/views/v1/payments/: view.cpp  view.hpp
src/views/v1/reverse_index/: view.cpp  view.hpp
tests/: CMakeLists.txt  conftest.py  test_basic.py
tools/: linecount.py  upload_payments.py
(+59 files in other folders)
